# ZERODAY-HACKATHON

./: .env  README.md  main.py  pyproject.toml  test.py
sarkarsathi/: index.html  package-lock.json  package.json  vite.config.js
sarkarsathi/public/: manifest.json
sarkarsathi/src/: index.css
sarkarsathi/src/popup/: auth.jsx  chat.jsx  chatInput.jsx  dashboard.jsx  icons.jsx  main.jsx  popup.html  popup.jsx
