[project]
name = "zeroday"
version = "0.1.0"
description = "backed for zeroday hackthon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "browser-use>=0.11.2",
    "fastapi>=0.127.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.45.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "uvicorn>=0.40.0",
]
